analyzer: reorder initialization of state m_invalid in sm-fd.cc [PR106184]

This patch reorders the initialization of state m_invalid in sm-fd.cc
so that the order of initializers is same as the ordering of the fields
in the class decl.

gcc/analyzer/ChangeLog:
	PR analyzer/106184
	* sm-fd.cc (fd_state_machine): Change ordering of initialization
	of state m_invalid so that the order of initializers is same as
	the ordering of the fields in the class decl.

Signed-off-by: Immad Mir <mirimmad@outlook.com>